--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <img src="images/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
-            <h2>Jair</h2>
+            <h2>Curso de HTML e CSS</h2>
             <img class="lado" src="images/curso-html-css.png" alt="Curso HTML CSS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptas unde natus consectetur facilis commodi possimus, officia quisquam reiciendis itaque aperiam autem. Eum corrupti, inventore dolor ut tenetur officiis optio!</p>
             <p><a href="html-css.html">Acesse o curso de HTML e CSS</a></p>
         </article>
         <article>
-            <h2>Elci</h2>
+            <h2>Curso de JavaScript</h2>
             <img class="lado" src="images/curso-javascript.png" alt="Curso Javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rerum est possimus a illo nulla esse tempore ducimus repellendus dolore, magni suscipit culpa corporis odio vel rem molestias inventore! Possimus?</p>
             <p><a href="js.html">Acesse o curso de Javascript</a></p>
